--- a/shoping/demo.html
+++ b/shoping/demo.html
@@ -1,1 +1,64 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>购物车</title>
+	<link rel="stylesheet" type="text/css" href="demo.css">
+</head>
+<body>
+<table class="tab">
+	<thead>
+		<tr>
+			<th><input type="checkbox" id="allselect" />全选</th>
+			<th>商品</th>
+			<th>单价</th>
+			<th>数量</th>
+			<th>小计</th>
+			<th>操作</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="checkbox"><input type="checkbox" /></td>
+			<td class="goods"><img src="images/1.jpg" alt=""/><span>Casio/卡西欧 EX-TR350</span></td>
+			<td class="price">5999</td>
+			<td class="count"><span class="reduce"></span><input class="count-input" type="text" value="1"/><span class="add">+</span></td>
+			<td class="sum">5999</td>
+			<td class="operation">删除</td>
+		</tr>
+		<tr>
+			<td class="checkbox"><input type="checkbox" /></td>
+			<td class="goods"><img src="images/2.jpg" alt=""/><span>Canon/佳能 PowerShot SX50 HS</span></td>
+			<td class="price">3888</td>
+			<td class="count"><span class="reduce"></span><input class="count-input" type="text" value="1"/><span class="add">+</span></td>
+			<td class="sum">3888</td>
+			<td class="operation">删除</td>
+		</tr>
+		<tr>
+			<td class="checkbox"><input type="checkbox" /></td>
+			<td class="goods"><img src="images/3.jpg" alt=""/><span>Sony/索尼 DSC-WX300</span></td>
+			<td class="price">1428</td>
+			<td class="count"><span class="reduce"></span><input class="count-input" type="text" value="1"/><span class="add">+</span></td>
+			<td class="sum">1428</td>
+			<td class="operation">删除</td>
+		</tr>
+		<tr>
+			<td class="checkbox"><input type="checkbox" /></td>
+			<td class="goods"><img src="images/4.jpg" alt=""/><span>Fujifilm/富士 instax mini 25</span></td>
+			<td class="price">640</td>
+			<td class="count"><span class="reduce"></span><input class="count-input" type="text" value="1"/><span class="add">+</span></td>
+			<td class="sum">640</td>
+			<td class="operation">删除</td>
+		</tr>
+	</tbody>
+</table>
+<div class="footer">
+	<label class="xz"><input type="checkbox" id="allselect" />&nbsp;全选</label>
+	<a class="del" href="javascript:void(0);">删除</a>
+	<div class="fr tatol">结算</div>
+	<div class="fr zh">合计:￥<span class="tsum">11957</span></div>
+	<div class="fr sel">已选商品:<span class="num">0</span>件<span class="arrow up">︽</span>
+        <span class="arrow down">︾</span></div>
+</div>
+<script src="demo.js" type="text/javascript"></script>
+</body>
+</html>
